tests/error/missing_return.magi
// TEST: Missing return in non-void function should error

foo :: () -> i32 {
    x := 5
}

main :: () -> i32 {
    return 0
}
